# OTS-Citrap-Report

./: README.md
OTS-Citrap-Report/: README.md
OTS-Citrap-Report/OTS-Citrap-Report/: PUBLISHING.md  pyproject.toml
OTS-Citrap-Report/OTS-Citrap-Report/ots_citrap_report/: app.py  default_config.py  models.py
OTS-Citrap-Report/OTS-Citrap-Report/ots_citrap_report/ui/: index.html
OTS-Citrap-Report/OTS-Citrap-Report/scripts/: build_static_index.py
OTS-Citrap-Report/ots_citrap_report/: app.py  default_config.py  models.py
